--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
