--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "dev:netlify:proxy": "netlify dev",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue src"
   },
@@ -19,6 +20,7 @@
     "@vitejs/plugin-vue": "^5.2.4",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.7.1",
+    "netlify-cli": "^23.14.0",
     "unocss": "^66.5.10",
     "vite": "^6.4.1"
   }
