--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,150 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# Dependencies
+node_modules/
+.npm/
+.pnpm-store/
+
+# Build outputs
+dist/
+build/
+.out/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# IDEs and editors
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
-node_modules
-dist
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Environment files
+.env*
+!.env.example
+
+# Typescript cache
+*.tsbuildinfo
+
+# Vite
+.vite/
+coverage/
+*.local
+
+# Testing
+__tests__/coverage/
+
+# OS generated files
+Thumbs.db
+
+# ESLint
+.eslintcache
+
+# TypeScript
+*.tsbuildinfo
+
+# Vue
+*.vue~
+
+# Debug
+debug/
+npm-debug.log*
+.yarn-integrity
+.shelf/
+
+# Optional eslint cache
+.eslintcache
+
+# parcel-bundler cache (if you use parcel)
+.cache/
+
+# next.js build output (if you use next.js)
+.next/
+
+# nuxt.js build output (if you use nuxt.js)
+.nuxt/
+
+# vuepress build output (if you use vuepress)
+.vuepress/dist/
+
+# Serverless directories (if you use serverless)
+.serverless/
+
+# FuseBox cache (if you use FuseBox)
+.fusebox/
+
+# DynamoDB Local files (if you use DynamoDB Local)
+.dynamodb/
+
+# TernJS port file (if you use TernJS)
+.tern-port
+
+# Mac files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+Windows/Temp/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Linux files
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# JetBrains IDE
+.idea/
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Vim
+*.swp
+*.swo
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+.bb
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+*.tmp
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
