--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .ts,.vue src"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -15,11 +15,17 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.1",
+    "@types/node": "^25.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@unocss/transformer-directives": "^66.5.10",
     "@vitejs/plugin-vue": "^5.2.4",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint-plugin-vue": "^9.0.0",
+    "typescript": "^5.9.3",
     "unocss": "^66.5.10",
-    "vite": "^6.4.1"
+    "vite": "^6.4.1",
+    "vue-tsc": "^2.2.0"
   }
 }
