--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,8 @@
   to = "https://yujieq-molscribe.hf.space/:splat"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
